# GCPBigDataVisualisation

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
docs/: architecture.md  looker.md  metabase.md  operations.md
infra/: cloudbuild.yaml
infra/metabase/: docker-compose.yml
looker/models/: analytics.model.lkml
looker/views/: entity_status_daily.view.lkml
samples/: fake_api_payload.json  raw_table_schema.json
scripts/: run_local.sh
src/: config.py  main.py
src/clients/: api_client.py  bigquery_client.py  gcs_client.py
src/extract/: checkpoint.py  extractor.py  paginator.py
src/load/: bq_loader.py  file_writer.py  gcs_uploader.py
src/transform/: runner.py
src/transform/sql/: 001_create_raw.sql  010_stg_entities.sql  010_stg_world_bank_indicator.sql  011_stg_open_meteo_hourly.sql  020_mart_country_indicator_year.sql  020_mart_example.sql  021_mart_weather_hourly.sql
src/utils/: dates.py  logging.py  retries.py
tests/: integration_test_pipeline.py  integration_test_pipeline_placeholder.py  test_api_client.py  test_config.py  test_extractors.py  test_main.py  test_retries.py  test_transform_helpers.py
